--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,19 +10,7 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-    {% if site.google_analytics %}   
-    <!-- Google Analytics -->
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-ga('create', '{{ site.google_analytics }}', 'auto');
-ga('send', 'pageview');
-</script>
-<!-- End Google Analytics -->
-    {% endif %}
+<meta name="google-site-verification" content="oUMUO7E9zlWdsEv5zsTrjWxAaxqCtRZgLwRqYLU2nYs" />
   </head>
   <body>
     <div class="wrapper">
